--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.1.0",
+    "version": "2.0.0",
     "command": "g++",
     "args": ["-g","${file}","-o","${file}.exe"],    // 编译命令参数
     "problemMatcher": {
@@ -13,5 +13,36 @@
             "severity": 4,
             "message": 5
         }
-    }
+    },
+    "tasks": [
+        {
+            "label": "g++",
+            "command": "g++",
+            "args": [
+                "-g",
+                "${file}",
+                "-o",
+                "${file}.exe"
+            ],
+            "problemMatcher": {
+                "owner": "cpp",
+                "fileLocation": [
+                    "relative",
+                    "${workspaceRoot}"
+                ],
+                "pattern": {
+                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "severity": 4,
+                    "message": 5
+                }
+            },
+            "group": {
+                "_id": "build",
+                "isDefault": false
+            }
+        }
+    ]
 }
